--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint": "^3.17.1",
     "express": "^4.15.2",
     "express-validation": "^1.0.2",
-    "joi": "^10.4.2"
+    "joi": "^10.4.2",
+    "scrypt": "^6.0.3"
   },
   "scripts": {
     "start": "node --inspect=0.0.0.0:5858 index.js"
